--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -47,57 +47,56 @@
         <!-- Dependencies global versions -->
         <commons.io.version>2.6</commons.io.version>
         <commons.lang.version>2.6</commons.lang.version>
-        <commons.lang3.version>3.7</commons.lang3.version>
-        <commons.cli>1.2</commons.cli>
-        <cxf.version>3.2.4</cxf.version>
-        <cxf-xjc.version>3.2.0</cxf-xjc.version>
-        <wss4j.version>2.2.0</wss4j.version>
+        <commons.lang3.version>3.8.1</commons.lang3.version>
+        <commons.cli>1.4</commons.cli>
+        <cxf.version>3.3.0-SNAPSHOT</cxf.version>
+        <cxf-xjc.version>3.2.3</cxf-xjc.version>
+        <wss4j.version>2.2.2</wss4j.version>
         <dbunit.version>2.4.7</dbunit.version>
-        <jaxb-api.version>2.2.10</jaxb-api.version>
-        <jaxb.version>2.2.10</jaxb.version>
-        <jaxb-xjc.version>2.2.10</jaxb-xjc.version>
-        <junit.version>4.8.2</junit.version>
-        <opendj.version>2.6.2</opendj.version>
-        <mockito.version>1.10.8</mockito.version>
-        <quartz.version>2.3.0.e2</quartz.version>
-        <selenium.version>3.6.0</selenium.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <logback.version>1.2.3</logback.version>
-        <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
-        <spring.version>5.0.7.RELEASE</spring.version>
-        <spring.security.version>5.0.6.RELEASE</spring.security.version>
-        <cas.client.version>3.5.0</cas.client.version>
-        <testng.version>6.8.8</testng.version>
+        <jaxb-api.version>2.3.0</jaxb-api.version>
+        <jaxb.version>2.3.0</jaxb.version>
+        <jaxb-xjc.version>2.3.0</jaxb-xjc.version>
+        <junit-jupiter-api.version>5.3.1</junit-jupiter-api.version>
+        <opendj.version>2.6.11</opendj.version>
+        <mockito.version>2.23.0</mockito.version>
+        <quartz.version>2.3.0</quartz.version>
+        <selenium.version>3.141.59</selenium.version>
+        <slf4j.version>1.8.0-beta2</slf4j.version>
+        <logback.version>1.3.0-alpha4</logback.version>
+        <spring.boot.version>2.1.0.RELEASE</spring.boot.version>
+        <spring.version>5.1.2.RELEASE</spring.version>
+        <spring.security.version>5.1.1.RELEASE</spring.security.version>
+        <cas.client.version>3.5.1</cas.client.version>
+        <testng.version>7.0.0-beta1</testng.version>
         <xml.resolver.version>1.2</xml.resolver.version>
-        <xmlunit.version>2.1.1</xmlunit.version>
-        <cron4j.version>2.2.3</cron4j.version>
-        <hibernate.version>5.2.12.Final</hibernate.version>
-        <h2.version>1.4.193</h2.version>
-        <jdbc.postgres>42.2.2</jdbc.postgres>
-        <jdbc.sqlserver>6.4.0.jre8</jdbc.sqlserver>
+        <xmlunit.version>2.6.2</xmlunit.version>
+        <hibernate.version>5.4.0.CR1</hibernate.version>
+        <h2.version>1.4.197</h2.version>
+        <jdbc.postgres>42.2.5</jdbc.postgres>
+        <jdbc.sqlserver>7.1.2.jre11-preview</jdbc.sqlserver>
         <jdbc.mariadb>2.3.0</jdbc.mariadb>
-        <jdbc.mysql>6.0.6</jdbc.mysql>
-        <wicket.version>7.10.0</wicket.version>
-        <groovy.version>2.4.14</groovy.version>
-        <activiti-engine.version>5.22.0</activiti-engine.version>
-        <activiti-spring.version>5.22.0</activiti-spring.version>
-        <commons-email.version>1.3</commons-email.version>
-        <xmlsec.version>2.0.6</xmlsec.version>
+        <jdbc.mysql>8.0.13</jdbc.mysql>
+        <wicket.version>8.2.0</wicket.version>
+        <groovy.version>3.0.0-alpha-3</groovy.version>
+        <activiti-engine.version>7.0.0.Beta3</activiti-engine.version>
+        <activiti-spring.version>7.0.0.Beta3</activiti-spring.version>
+        <commons-email.version>1.5</commons-email.version>
+        <xmlsec.version>2.1.2</xmlsec.version>
         <connid.version>1.5.0.0</connid.version>
-        <jasper.version>6.5.0</jasper.version>
-        <derby.version>10.11.1.1</derby.version>
+        <jasper.version>6.7.0</jasper.version>
+        <derby.version>10.14.2.0</derby.version>
         <wro4j.version>1.8.0</wro4j.version>
-        <jackson.version>2.9.5</jackson.version>
-        <snakeyaml.version>1.19</snakeyaml.version>
+        <jackson.version>2.9.7</jackson.version>
+        <snakeyaml.version>1.23</snakeyaml.version>
         <surefire.version>2.22.1</surefire.version>
         <reflections.version>0.9.11</reflections.version>
-        <guava.version>20.0</guava.version>
+        <guava.version>27.0-jre</guava.version>
         <jcommander.version>1.72</jcommander.version>
-		<failsafe.version>2.22.0</failsafe.version>
+		<failsafe.version>3.0.0-M1</failsafe.version>
 		<antrun.version>1.8</antrun.version>
     </properties>
     <dependencyManagement>
-        <dependencies>
+        <dependencies>	
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
@@ -310,9 +309,9 @@
                 <version>1.0.1</version>
             </dependency>
             <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                    <version>${jaxb-api.version}</version>
+				<groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
             </dependency>          
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
@@ -365,7 +364,7 @@
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.10</version>
+                <version>1.11</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
@@ -424,7 +423,7 @@
             <dependency>
                 <groupId>org.jetbrains</groupId>
                 <artifactId>annotations-java5</artifactId>
-                <version>15.0</version>
+                <version>16.0.3</version>
             </dependency>
             <dependency>
                 <groupId>javax.annotation</groupId>
@@ -434,7 +433,7 @@
             <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
-                <version>1.2</version>
+                <version>1.3.2</version>
             </dependency>
             <dependency>
 				<groupId>javax.jws</groupId>
@@ -651,7 +650,7 @@
 				<!-- make this dependency explicit to detect conflicts with older versions -->
 			  <groupId>org.codehaus.woodstox</groupId>
 			  <artifactId>stax2-api</artifactId>
-			  <version>3.1.4</version>
+			  <version>4.1</version>
 			</dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
@@ -1035,7 +1034,7 @@
 	        <dependency>
 	            <groupId>org.jvnet.jaxb2_commons</groupId>
 	            <artifactId>jaxb2-basics-runtime</artifactId>
-	            <version>0.6.3</version>
+	            <version>1.11.1</version>
 	        </dependency>
 			<dependency>
 				<groupId>org.apache.maven</groupId>
@@ -1282,7 +1281,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>${project.source.version}</source>
 					<target>${project.source.version}</target>
@@ -1524,7 +1523,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.4.1</version>
+				<version>3.0.0-M2</version>
 				<executions>
 					<execution>
 						<id>enforce</id>
@@ -1539,10 +1538,10 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.1.1</version>
 				<executions>
 					<execution>
 						<id>analyze</id>
@@ -1552,42 +1551,49 @@
 						<configuration>
 							<failOnWarning>true</failOnWarning>
 							<ignoreNonCompile>true</ignoreNonCompile>
-							<ignoredUnusedDeclaredDependencies>
+							<ignoredUnusedDeclaredDependencies>-->
 
 								<!-- There are dependencies in this master POM. So they are projected 
 									everywhere, used or unused. -->
-								<ignoredUnusedDeclaredDependency>org.springframework</ignoredUnusedDeclaredDependency>
-                                <ignoredUnusedDeclaredDependency>org.springframework.boot</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>org.springframework</ignoredUnusedDeclaredDependency>
+                                <ignoredUnusedDeclaredDependency>org.springframework.boot</ignoredUnusedDeclaredDependency>-->
 
 								<!-- Common "drill" for all modules. -->
-								<ignoredUnusedDeclaredDependency>com.evolveum.midpoint.tools:test-ng</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>com.evolveum.midpoint.tools:test-ng</ignoredUnusedDeclaredDependency>
 								<ignoredUnusedDeclaredDependency>org.testng:testng</ignoredUnusedDeclaredDependency>
-								<ignoredUnusedDeclaredDependency>commons-lang:commons-lang</ignoredUnusedDeclaredDependency>
+								<ignoredUnusedDeclaredDependency>commons-lang:commons-lang</ignoredUnusedDeclaredDependency>-->
 
 								<!-- There is some kind of conflict between these. TODO: clean up -->
-								<ignoredUnusedDeclaredDependency>xml-apis:xml-apis</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>xml-apis:xml-apis</ignoredUnusedDeclaredDependency>
 								<ignoredUnusedDeclaredDependency>stax:stax-api</ignoredUnusedDeclaredDependency>
-								<ignoredUnusedDeclaredDependency>org.springframework.ldap:spring-ldap-core</ignoredUnusedDeclaredDependency>
+								<ignoredUnusedDeclaredDependency>org.springframework.ldap:spring-ldap-core</ignoredUnusedDeclaredDependency>-->
 
 								<!-- We are making this dependency explicit to detect conflicts early -->
-								<ignoredUnusedDeclaredDependency>org.codehaus.woodstox:stax2-api</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>org.codehaus.woodstox:stax2-api</ignoredUnusedDeclaredDependency>-->
 
 								<!-- The xjc-plugin does not compile without dependency on this -->
-								<ignoredUnusedDeclaredDependency>org.apache.cxf:cxf-tools-common</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>org.apache.cxf:cxf-tools-common</ignoredUnusedDeclaredDependency>-->
 
 								<!-- Cannot help myself with this one (commons-configuration 1.6 causes this) TODO: revisit -->
-								<ignoredUnusedDeclaredDependency>commons-beanutils:commons-beanutils-core</ignoredUnusedDeclaredDependency>
+								<!--<ignoredUnusedDeclaredDependency>commons-beanutils:commons-beanutils-core</ignoredUnusedDeclaredDependency>
 							</ignoredUnusedDeclaredDependencies>
-							<ignoredUsedUndeclaredDependencies>
+							<ignoredUsedUndeclaredDependencies>-->
 								<!-- There is some kind of conflict between these. TODO: clean up -->
-								<ignoredUsedUndeclaredDependency>xml-apis:xml-apis</ignoredUsedUndeclaredDependency>
+								<!--<ignoredUsedUndeclaredDependency>xml-apis:xml-apis</ignoredUsedUndeclaredDependency>
 								<ignoredUsedUndeclaredDependency>stax:stax-api</ignoredUsedUndeclaredDependency>
 								<ignoredUsedUndeclaredDependency>org.springframework.ldap:spring-ldap-core</ignoredUsedUndeclaredDependency>
 							</ignoredUsedUndeclaredDependencies>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+				<dependencies>
+					<dependency>
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>7.0</version>
+					</dependency>
+				</dependencies>
+			</plugin>-->
 		</plugins>
 	</build>
 
