--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -212,7 +212,7 @@
         <dependency>
             <groupId>org.jasig.cas.client</groupId>
             <artifactId>cas-client-core</artifactId>
-            <version>3.5.0</version>
+            <version>${cas.client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
