--- a/infra/prism-maven-plugin/pom.xml
+++ b/infra/prism-maven-plugin/pom.xml
@@ -55,6 +55,12 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-archiver</artifactId>
+			<exclusions>
+				<exclusion>
+                    <groupId>com.google.code.findbugs</groupId>
+                    <artifactId>jsr305</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
