--- a/infra/schema/pom.xml
+++ b/infra/schema/pom.xml
@@ -145,6 +145,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+	<pluginRepositories>         
+   		<pluginRepository>
+      		<id>apache.snapshots</id>
+      		<name>Maven Plugin Snapshots</name>
+      		<url>http://repository.apache.org/snapshots/</url>
+      		<snapshots>
+        		<enabled>true</enabled>
+      		</snapshots>
+    	</pluginRepository>
+	</pluginRepositories>
     <build>
         <plugins>
             <plugin>
@@ -246,6 +256,7 @@
                                     </extraargs>
                                 </wsdlOption>
                             </wsdlOptions>
+                            <validateWsdl>false</validateWsdl>
                         </configuration>
                         <goals>
                             <goal>wsdl2java</goal>
@@ -261,7 +272,7 @@
                     <dependency>
                         <groupId>org.jvnet.jaxb2_commons</groupId>
                         <artifactId>jaxb2-basics</artifactId>
-                        <version>0.6.3</version>
+                        <version>1.11.1</version>
                     </dependency>
                     <dependency>
                         <groupId>com.evolveum.midpoint.tools</groupId>
