--- a/infra/util/pom.xml
+++ b/infra/util/pom.xml
@@ -45,8 +45,8 @@
 			<artifactId>commons-codec</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
+			<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -96,12 +96,20 @@
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations-java5</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>org.eclipse.birt.runtime.3_7_1</groupId>
+  			<artifactId>org.apache.xerces</artifactId>
+  			<version>2.9.0</version>
+		</dependency>
         <!-- Test -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 	</dependencies>
 </project>
