--- a/model/workflow-impl/pom.xml
+++ b/model/workflow-impl/pom.xml
@@ -300,8 +300,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 <!--             <version>4.8.2</version> -->
             <scope>test</scope>
         </dependency>
